--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: info
+        include: health, info, metrics, env, beans, mappings, httptrace
   info:
     env:
       enabled: true
