--- a/pom.xml
+++ b/pom.xml
@@ -126,15 +126,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <additionalProperties>
-                        <build-info>
-                            <properties>
-                                <version>${project.version}</version>
-                            </properties>
-                        </build-info>
-                    </additionalProperties>
-                </configuration>
+                <version>3.4.4</version>
                 <executions>
                     <execution>
                         <goals>
