--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,11 +29,11 @@ management:
       exposure:
         include: health, info, metrics, env, beans, mappings, httptrace
   info:
+    build:
+      enabled: true
     env:
       enabled: true
-
 info:
   app:
     name: GHKG API
-    version: ${project.version}
     description: API for testing purpose - GHolak and KGomulski
