adding git info

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <springdoc.openapi.starter.version>2.8.6</springdoc.openapi.starter.version>
         <mockito.version>5.9.0</mockito.version>
         <jsonwebtoken.version>0.11.5</jsonwebtoken.version>
+        <git.commit.id.version>4.9.10</git.commit.id.version>
     </properties>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -134,6 +135,29 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+                <version>4.9.10</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>revision</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <failOnNoGitDirectory>false</failOnNoGitDirectory>
+                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
+                    <includeOnlyProperties>
+                        <includeOnlyProperty>git.commit.id</includeOnlyProperty>
+                        <includeOnlyProperty>git.commit.time</includeOnlyProperty>
+                        <includeOnlyProperty>git.branch</includeOnlyProperty>
+                        <includeOnlyProperty>git.build.version</includeOnlyProperty>
+                    </includeOnlyProperties>
+                </configuration>
             </plugin>
         </plugins>
     </build>
