--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.4.4</version>
                 <executions>
                     <execution>
                         <goals>
@@ -140,7 +139,7 @@
             <plugin>
                 <groupId>pl.project13.maven</groupId>
                 <artifactId>git-commit-id-plugin</artifactId>
-                <version>4.9.10</version>
+                <version>${git.commit.id.version}</version>
                 <executions>
                     <execution>
                         <goals>
