--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pl.com.holak</groupId>
     <artifactId>GHKG-API</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.4-SNAPSHOT</version>
 
     <properties>
         <java.version>17</java.version>
@@ -106,6 +106,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-actuator-autoconfigure</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -134,6 +138,12 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <additionalProperties>
+                        <build.version>${project.version}</build.version>
+                        <build.name>${project.name}</build.name>
+                    </additionalProperties>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -152,6 +162,7 @@
                     <generateGitPropertiesFile>true</generateGitPropertiesFile>
                     <includeOnlyProperties>
                         <includeOnlyProperty>git.commit.id</includeOnlyProperty>
+                        <includeOnlyProperty>git.commit.id.abbrev</includeOnlyProperty>
                         <includeOnlyProperty>git.commit.time</includeOnlyProperty>
                         <includeOnlyProperty>git.branch</includeOnlyProperty>
                         <includeOnlyProperty>git.build.version</includeOnlyProperty>
