--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,9 @@ spring:
     console:
       enabled: true
       path: /h2-console
+
   thymeleaf:
+    enabled: true
     prefix: classpath:/templates/
     suffix: .html
     cache: false
