--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <mockito.version>5.9.0</mockito.version>
         <jsonwebtoken.version>0.11.5</jsonwebtoken.version>
         <git.commit.id.version>4.9.10</git.commit.id.version>
+        <thymeleaf.layout.dialect.version>3.2.0</thymeleaf.layout.dialect.version>
     </properties>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -120,6 +121,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+            <version>${thymeleaf.layout.dialect.version}</version>
         </dependency>
     </dependencies>
 
