split data.sql to local and render

--- a/src/main/resources/application-render.yml
+++ b/src/main/resources/application-render.yml
@@ -11,3 +11,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+  sql:
+    init:
+      mode: always
+      data-locations: classpath:data-render.sql
